--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,4 +1,6 @@
-
+"name": "Jekyll",
+"image": "mcr.microsoft.com/devcontainers/universal:2",
+ "features": {},
 "forwardPorts" : [3000],
 "portsAttributes" : {
 "3000" : {
